Add example exercises endpoint
